# nixrbd

./: Conf.hs  LICENSE  Main.hs  Nix.hs  README.md  Route.hs  default.nix  nixrbd.cabal  pkgs.nix  project.nix  release.nix
lib/: ipxe.nix  nixrbd.nix
utils/: chain.ipxe  ipxe.nix  menu-simple.nix  start_qemu
