Name:            nixrbd
Version:         0.0
Synopsis:        NixOS Remote Boot Daemon
Description:     NixOS Remote Boot Daemon
Author:          Rickard Nilsson
Maintainer:      rickynils@gmail.com
Stability:       Experimental
Category:        System
Build-type:      Simple
Cabal-version:   >=1.2

Executable nixrbd
  Main-Is:       Main.hs
  GHC-Options:   -Wall -O2 -threaded
  Build-Depends: base >= 4 && < 5,
                 bytestring,
                 cmdargs,
                 directory,
                 http-types,
                 process,
                 text,
                 transformers,
                 wai,
                 warp
