Name:            nixrbd
Version:         0.1.1
Synopsis:        NixOS Remote Boot Daemon
Description:     NixOS Remote Boot Daemon
Author:          Rickard Nilsson
Maintainer:      rickynils@gmail.com
Stability:       Experimental
Category:        System
Build-type:      Simple
Cabal-version:   >=1.2

Executable nixrbd
  Main-Is:       Main.hs
  Other-Modules: Route Nix Conf
  GHC-Options:   -Wall -O2 -threaded
  Build-Depends: base >= 4 && < 5,
                 bytestring,
                 cmdargs,
                 data-default,
                 directory,
                 filepath,
                 hslogger,
                 http-types,
                 mtl,
                 network >= 2.6,
                 network-uri >= 2.6,
                 process,
                 split,
                 text,
                 transformers,
                 wai,
                 wai-extra,
                 warp
